get rid of error
(this error:)
server_socket: bind to '0.0.0.0:6600' failed: Address already in use (continuing anyway, because binding to '[::]:6600' succeeded)

--- a/music/.mpd/mpd.conf
+++ b/music/.mpd/mpd.conf
@@ -38,6 +38,9 @@ audio_output {
         path                    "/tmp/mpd.fifo"
 }
 
+bind_to_address "127.0.0.1"
+port "6600"
+
 # Files and directories #######################################################
 #
 # This setting controls the top directory which MPD will search to discover the
@@ -122,7 +125,6 @@ audio_output {
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
 #
-port				"6600"
 #
 # This setting controls the type of information which is logged. Available 
 # setting arguments are "default", "secure" or "verbose". The "verbose" setting
