fix distortion problem
this just started happening and only with a single album, but turning
off replaygain fixes it for now

--- a/music/.mpd/mpd.conf
+++ b/music/.mpd/mpd.conf
@@ -23,7 +23,8 @@ connection_timeout "6000"
 
 # required to control volume with below audio_output; won't mess with master volume
 mixer_type "software"
-replaygain "auto"
+# suddenly causes distortion for some songs, so explicitly off
+replaygain "off"
 gapless_mp3_playback "yes"
 
 audio_output {
