minor/unimportant changes

--- a/music/.mpd/mpd.conf
+++ b/music/.mpd/mpd.conf
@@ -27,9 +27,14 @@ mixer_type "software"
 replaygain "off"
 gapless_mp3_playback "yes"
 
+# audio_output {
+#         type                    "alsa"
+#         name                    "Sound Card"
+# }
+
 audio_output {
-        type                    "alsa"
-        name                    "Sound Card"
+        type            "pulse"
+        name            "pulse audio"
 }
 
 # visualization in ncmpcpp
@@ -39,9 +44,18 @@ audio_output {
         path                    "/tmp/mpd.fifo"
 }
 
+
+input {
+        plugin "curl"
+#       proxy "proxy.isp.com:8080"
+#       proxy_user "user"
+#       proxy_password "password"
+}
+
 bind_to_address "127.0.0.1"
 port "6600"
 
+# defaults # {{{
 # Files and directories #######################################################
 #
 # This setting controls the top directory which MPD will search to discover the
@@ -226,12 +240,12 @@ port "6600"
 # Input #######################################################################
 #
 
-input {
-        plugin "curl"
+# input {
+        # plugin "curl"
 #       proxy "proxy.isp.com:8080"
 #       proxy_user "user"
 #       proxy_password "password"
-}
+# }
 
 #
 ###############################################################################
@@ -481,4 +495,4 @@ input {
 #}
 #
 ###############################################################################
-
+# }}}
