--- a/mail_and_cal/.muttrc
+++ b/mail_and_cal/.muttrc
@@ -1,3 +1,5 @@
+# TODO:
+# add real delete
 # Sources:
 # * http://stevelosh.com/blog/2012/10/the-homely-mutt/#mutt
 # https://wiki.archlinux.org/index.php/mutt
