make setting background/refreshing conky easier

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -50,6 +50,11 @@ map cr slowshell mogrify -rotate 90 %f
 # extract and delete archive
 # map tu slowshell exd %s
 
+# setbg function in ranger_functionstions
+# sets background and copies command to clipboard (for pasting into ~/.xinitrc)
+map sw shell setbg width %d/%f
+map sb shell setbg height %d/%f
+
 # link hinting in ranger
 map tf slowshell xdotool key control+shift+x
 
