fix macro escaping, update commands.py, and reorder settings
.problems with macro escaping were being caused by how was sourcing
ranger_functions: bash -c 'source stuff; ...'
.removed custom commands from commands.py (extracthere from the archwiki
works on copied files for some reason)
.update commands.py to match newest default version

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -3,7 +3,6 @@
 # .https://github.com/hut/ranger/pull/102
 # .using "?
 # .mess with idle_delay
-# .dealing with files/folders that have spaces in the names (pwd instead of %d?)
 
 # have x unmapped, and b* open
 
@@ -12,37 +11,40 @@
 # default copy, delete, etc. bindings will work on selected or current file if none marked selected
 # I haven't had a problem doing this:
 # shell <some command> %s || <same command> %f
-# IMPORTANT NOTE: ranger macros don't work with files/dirs with spaces in the name
+
+# IMPORTANT NOTE: macro escaping won't work if you are sourcing some bash or zsh functions like so in the shell class of commands.py:
+# "bash -c 'source ~/.config/ranger/ranger_functions;" + command + "'", flags=flags
+# fix the single quotes:
+# self.fm.execute_command('bash -c "source ~/.config/ranger/ranger_functions;' + command + '"', flags=flags)
+# also see https://github.com/hut/ranger/issues/85
 
 # Settings# {{{
 set column_ratios 1,3,5
-set tilde_in_titlebar true
-
 # Display the directory name in tabs?
 set dirname_in_tabs true
+# Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
+set tilde_in_titlebar true
+# Set the title to "ranger" in the tmux program?
+set update_tmux_title true
 
-# This has actually been successfully tested with xterm, urxvt, termite, gnome-terminal with and without tmux.
-set preview_images true
-# no padding when no preview
-set padding_right false
-# show hidden files default
-set show_hidden true
 # show git info
 set vcs_aware true
 set vcs_backend_git enabled
+
+# show hidden files by default (when starting)
+set show_hidden true
+
+# This has actually been successfully tested with xterm, urxvt, termite, gnome-terminal, and other vte terminals with and without tmux.
+set preview_images true
+# no clickable padding when no preview
+set padding_right false
+
 # open all images in folder with sxiv.. unlike shell script one, opens in ranger order; messes things up very badly if thousands of images in the folder
 set open_all_images true
+
 # increase history kept
 set max_history_size 30
 set max_console_history_size 100
-
-# Set the title to "ranger" in the tmux program?
-set update_tmux_title true
-# Display the directory name in tabs?
-set dirname_in_tabs true
-
-# Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
-set tilde_in_titlebar true
 
 # smart case find
 alias find scout -aets
@@ -195,7 +197,7 @@ map ¸ eval fm.ui.console.delete_word()
 # renaming
 map a eval fm.open_console('rename ' + fm.thisfile.basename)
 map cw console rename 
-# copying path/dir/filename to clipboard (doesn't work if spaces in name)
+# copying path/dir/filename to clipboard
 map yp shell -d echo -n %d/%f | xclip -selection clipboard
 map yd shell -d echo -n %d    | xclip -selection clipboard
 map yn shell -d echo -n %f    | xclip -selection clipboard
