now that mpv has a-b loop, update gif making scripts

--- a/media/.mpv/input.conf
+++ b/media/.mpv/input.conf
@@ -55,25 +55,6 @@ z-i add panscan +0.1 # in
 N add volume -1
 E add volume 1
 
-# scripts# {{{
- 
-# gif making# {{{
-# run in fullscreen (records active window)
-# O run /home/angelic_sedition/bin/mpv/ffmpeg_gif.sh
-# end recording
-# o run pkill ffmpeg
-
-# old crap for making gif from file# {{{
-# need fullpath; use with actual video file
-# start timing for gif 
-# o run /home/angelic_sedition/bin/mpv/mpv_gif.sh 1 ${time-pos} ${path}
-# end time for gif
-# O run /home/angelic_sedition/bin/mpv/mpv_gif.sh 2 ${time-pos}
-# testing
-# a run /home/angelic_sedition/bin/mpv/mpv_gif2.sh ${height} ${width} ${border}
-# }}}
-# }}}
-# }}}
 
 #Multikey bindings# {{{
 # Must bind intermediates to ignore
@@ -201,6 +182,18 @@ s-p-d run bspc desktop -c
 #}}}
 
 #}}}
+
+# }}}
+
+# gif making# {{{
+a run "/bin/sh" "-c" "echo ${=time-pos} > ~/Move/gif/start_time.txt &" ; set ab-loop-a ${=time-pos}
+b run "/bin/sh" "-c" "echo ${=time-pos} > ~/Move/gif/end_time.txt &" ; set ab-loop-b ${=time-pos}
+# clear (mostly)
+c set ab-loop-a no
+# sets a, b, then clears
+# g ab_loop
+G cycle pause ; run "/bin/sh" "-c" "echo '${path}' > ~/Move/gif/filepath.txt" ; run /home/angelic_sedition/bin/mpv/ffcut ${path}
+SPACE-G cycle pause ; run "/bin/sh" "-c" "echo '${path}' > ~/Move/gif/filepath.txt" ; run /home/angelic_sedition/bin/mpv/ffcut make_gif ${path}
 
 # }}}
 
