switch from imlibsetroot to setroot

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -136,8 +136,7 @@ map ud shell trash-restore
 
 # setbg function in ranger_functions
 # sets background and copies command to clipboard (for pasting into ~/.xinitrc)
-map sw shell setbg width %d/%f
-map sb shell setbg height %d/%f
+map sb shell setbg %d/%f
 
 # image magick
 # change rotation; image rotate with imagemagick
