major updates to dropdown script
.add functions for mapping/unmapping by window id
.add options for setting width height and position (in numbers or as
percentage)
.automatically hide dropdown when opening sxiv from it and reshow after
closing sxiv (can be toggled on/off)

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -212,6 +212,8 @@ map tc console touch
 map tr reload_cwd
 # open With
 map tw chain draw_possible_programs; console open_with 
+# toggle hiding behaviour when opening a new window; by default will hide terminal when opening sxiv and then show after quitting sxiv
+map th shell hide_show toggle_hide
 # }}}
 
 # Colemak Movement# {{{
