--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -18,7 +18,8 @@ mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
 mime ^video, terminal, !X, has mpv = mpv -- "$@"
 
 # images
-mime ^image, has sxiv, X, flag f = sxiv -- "$@"
+# hide window opening from and wait for sxiv to quit to show again; this can be toggled
+mime ^image, has sxiv, X, flag f = hide_show check_hide ; sxiv -a -- "$@" && hide_show check_show
 
 # pdf
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
