clean hide_show script and add functionality/opts
.add help for quick reminder of options
.use double square brackets
.get rid of shellcheck errors/warnings
.use -n and -z instead of comparing to ""
.get rid of useless cats
.get rid of non-terminal functionality
.make "main" body smaller/move everything to functions
.add function "hide_on_open" for auto hiding dropdown when doing things like git commit (since using gvim)
.add vim modeline

--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -19,7 +19,7 @@ mime ^video, terminal, !X, has mpv = mpv -- "$@"
 
 # images
 # hide window opening from and wait for sxiv to quit to show again; this can be toggled
-mime ^image, has sxiv, X, flag f = hide_show check_hide ; sxiv -a -- "$@" && hide_show check_show
+mime ^image, has sxiv, X, flag f = hide_show auto_hide ; sxiv -a -- "$@" && hide_show auto_show
 
 # pdf
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
