--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -6,16 +6,15 @@ ext x?html?, has firefox,        X, flag f = firefox -- "$@"
 ext x?html?, has w3m,            terminal  = w3m "$@"
 
 # add filetypes
-!mime ^text, label editor, ext xml|csv|tex|py|pl|rb|sh|php|hs|js|json = "$EDITOR" -- "$@"
+!mime ^text, label editor, ext xml|csv|tex|py|pl|rb|sh|php|hs|js|json|vim|java|rs|toml = "$EDITOR" -- "$@"
 
 # audio without x
-mime ^audio|ogg$, terminal, has mplayer = mpv -- "$@"
-# audio/ video without gui
-mime ^video,       has mpv,      X, flag f = mpv -- "$@"
-mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
+mime ^audio|ogg$, terminal, has mpv = mpv -- "$@"
+# video with x
+mime ^video, has mpv, X, flag f = hide_show auto_hide ; mpv --loop=inf -- "$@" && hide_show auto_show
 
 # video without x
-mime ^video, terminal, !X, has mpv = mpv -- "$@"
+mime ^video, terminal, !X, has vlc = vlc -- "$@"
 
 # images
 # hide window opening from and wait for sxiv to quit to show again; this can be toggled
