update empty desktop bindings to match normal ones

--- a/remap/.config/sxhkd/.empty_sxhkdrc
+++ b/remap/.config/sxhkd/.empty_sxhkdrc
@@ -37,8 +37,9 @@ semicolon ; a
 semicolon ; {g,v}
 	{gvim,gvim}
 
+#
 # keep bindings# {{{
-## Dropdown Terms# {{{
+# Dropdown Terms# {{{
 super + r
 	guake -t
 
