move hide_show in bin to separate repo as tdrop

--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -18,7 +18,7 @@ mime ^video, terminal, !X, has vlc = vlc -- "$@"
 
 # images
 # hide window opening from and wait for sxiv to quit to show again; this can be toggled
-mime ^image, has sxiv, X, flag f = hide_show auto_hide ; sxiv -a -- "$@" && hide_show auto_show
+mime ^image, has sxiv, X, flag f = tdrop auto_hide ; sxiv -a -- "$@" && tdrop -p bspwm auto_show
 
 # pdf
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
