change screenshot format to year.month.day also, when playing videos from firefox in mpv, take screenshots in current directory

--- a/media/.mpv/config
+++ b/media/.mpv/config
@@ -5,7 +5,7 @@
 # screenshot-template=~/Move/Screenshots/%tm.%td.%ty_%tH:%tM:%tS_-_%F
 
 # for long filenames with characters that give "error writing screenshot":
-screenshot-template=~/Move/Screenshots/%tm.%td.%ty_%tH:%tM:%tS
+screenshot-template=~/Move/Screenshots/%ty.%tm.%td_%tH:%tM:%tS
 screenshot-format=png
 screenshot-png-compression=5
 sub-scale=1
