add key binding to convert file to pdf (mostly using with word docs)

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -147,6 +147,8 @@ map cs shell make_thumbnail %f
 
 # convert file to txt
 map ct shell unoconv -f txt %f
+# convert file to pdf
+map cp shell unoconv -f pdf %f
 
 # https://bbs.archlinux.org/viewtopic.php?pid=1458918#p1458918
 # send selected or current file as an attachment with mutt
