--- a/aesthetics/.compton.conf
+++ b/aesthetics/.compton.conf
@@ -1,98 +1,189 @@
-# https://wiki.archlinux.org/index.php/Compton
-# I have not made many changes
+# based on a config that used to be here: https://wiki.archlinux.org/index.php/Compton
+# see original commit for more original config
+# comments and settings mostly from:
+# https://labo.olivierdelort.net/bricewge/dotfiles-bspwm/blame/master/.compton.conf
+# using inactive opacity and dimming, purple shadows, and fading
+# notes:
+# unredir-if-possible true is annoying with fullscreen
 
-# Shadow
-# no shadows around conky
-shadow-exclude = "class_g = 'conky'";
+# * Bspwm Fix
+# need to be false for inactive window opacity to work with bspwm
+mark-wmwin-focused = false;
+mark-ovredir-focused = false;
 
+# * Opacity and Dimming
+active-opacity = 1;
+menu-opacity = 0.9;
+inactive-opacity = 0.8;
+ # Opacity of window titlebars and borders. (0.1 - 1.0)
+frame-opacity = 1;
+ # Let inactive opacity set by 'inactive-opacity' overrides the windows' _NET_WM_OPACITY values. Bad choice.
+inactive-opacity-override = false;
+# only for xrender backend?
+# alpha-step = 0.06;
 
-shadow = true; # Enabled client-side shadows on windows.
-no-dock-shadow = true; # Avoid drawing shadows on dock/panel windows.
-no-dnd-shadow = true; # Don't draw shadows on DND windows.
-clear-shadow = true; # Zero the part of the shadow's mask behind the
-# window. Fix some weirdness with ARGB windows.
-shadow-radius = 7; # The blur radius for shadows. (default 12)
-shadow-offset-x = -7; # The left offset for shadows. (default -15)
-shadow-offset-y = -7; # The top offset for shadows. (default -15)
-# shadow-opacity = 0.7; # The translucency for shadows. (default .75)
-# shadow-red = 0.0; # Red color value of shadow. (0.0 - 1.0, defaults to 0)
-# shadow-green = 0.0; # Green color value of shadow. (0.0 - 1.0, defaults to 0)
-# shadow-blue = 0.0; # Blue color value of shadow. (0.0 - 1.0, defaults to 0)
-#shadow-exclude = [ "n:e:Notification" ]; # Exclude conditions for shadows.
-# shadow-exclude = "n:e:Notification";
-shadow-ignore-shaped = true; # Avoid drawing shadow on all shaped windows
-  # (see also: --detect-rounded-corners)
+inactive-dim = 0.4;
+# Do not let dimness adjust based on window opacity.
+inactive-dim-fixed = false;
 
-# Opacity
-menu-opacity = 0.9; # The opacity for menus. (default 1.0)
-inactive-opacity = 0.9; # Default opacity of inactive windows. (0.0 - 1.0)
-# active-opacity = 0.8; # Default opacity for active windows. (0.0 - 1.0)
-# frame-opacity = 0.8; # Opacity of window titlebars and borders. (0.1 - 1.0)
-# inactive-opacity-override = true; # Let inactive opacity set by 'inactive-opacity' overrides
-  # value of _NET_WM_OPACITY. Bad choice.
-alpha-step = 0.06; # XRender backend: Step size for alpha pictures. Increasing
-# it may result in less X resource usage,
-# Yet fading may look bad.
-# inactive-dim = 0.2; # Dim inactive windows. (0.0 - 1.0)
-# inactive-dim-fixed = true; # Do not let dimness adjust based on window opacity.
-# blur-background = true; # Blur background of transparent windows.
-# Bad performance with X Render backend.
-# GLX backend is preferred.
-# blur-background-frame = true; # Blur background of opaque windows with transparent
-# frames as well.
-blur-background-fixed = false; # Do not let blur radius adjust based on window opacity.
-blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
+# Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
+blur-background = true;
+# Blur background of opaque windows with transparent frames as well.
+blur-background-frame = true;
+# Do not let blur radius adjust based on window opacity.
+blur-background-fixed = false;
 # Exclude conditions for background blur.
+blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
 
-# Fading
-fading = true; # Fade windows during opacity changes.
-fade-delta = 7; # The time between steps in a fade in milliseconds. (default 10).
-fade-in-step = 0.03; # Opacity change between steps while fading in. (default 0.028).
-fade-out-step = 0.03; # Opacity change between steps while fading out. (default 0.03).
-# no-fading-openclose = true; # Avoid fade windows in/out when opening/closing.
-fade-exclude = [ ]; # Exclude conditions for fading.
+# * Shadows
+# Enabled client-side shadows on windows.
+shadow = true;
+# Don't draw shadows on DND windows.
+no-dnd-shadow = true;
+# Avoid drawing shadows on dock/panel windows.
+no-dock-shadow = true;
+# Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
+clear-shadow = true;
+# The blur radius for shadows. (default 12)
+shadow-radius = 8;
+# The left offset for shadows. (default -15)
+shadow-offset-x = -7;
+# The top offset for shadows. (default -15)
+shadow-offset-y = -7;
+# The translucency for shadows. (default .75)
+shadow-opacity = 0.9;
 
-# Other
-backend = "xrender" # Backend to use: "xrender" or "glx". GLX backend is typically
-# much faster but depends on a sane driver.
-mark-wmwin-focused = true; # Try to detect WM windows and mark them as active.
-mark-ovredir-focused = true; # Mark all non-WM but override-redirect windows active (e.g. menus).
-use-ewmh-active-win = false; # Use EWMH _NET_WM_ACTIVE_WINDOW to determine which window is focused
-# instead of using FocusIn/Out events. Usually more reliable but
-# depends on a EWMH-compliant WM.
-detect-rounded-corners = true; # Detect rounded corners and treat them as rectangular when --shadow-ignore- shaped is on.
-detect-client-opacity = true; # Detect _NET_WM_OPACITY on client windows, useful for window
-# managers not passing _NET_WM_OPACITY of client windows to frame
-# windows.
-refresh-rate = 0; # For --sw-opti: Specify refresh rate of the screen. 0 for auto.
-vsync = "none"; # "none", "drm", "opengl", "opengl-oml", "opengl-swc", "opengl-mswc"
-# See man page for more details.
-dbe = false; # Enable DBE painting mode. Rarely needed.
-paint-on-overlay = false; # Painting on X Composite overlay window. Recommended.
-sw-opti = false; # Limit compton to repaint at most once every 1 / refresh_rate.
-# Incompatible with certain VSync methods.
-unredir-if-possible = false; # Unredirect all windows if a full-screen opaque window is
-# detected, to maximize performance for full-screen windows.
-focus-exclude = [ ]; # A list of conditions of windows that should always be considered
-# focused.
-detect-transient = true; # Use WM_TRANSIENT_FOR to group windows, and consider windows in
-# the same group focused at the same time.
-detect-client-leader = true; # Use WM_CLIENT_LEADER to group windows.
-invert-color-include = [ ]; # Conditions for windows to be painted with inverted color.
+# Purple shadows
+shadow-red = 0.2;
+# shadow-green = 0.0;
+shadow-blue = 0.7;
 
-# GLX backend # GLX backend fine-tune options. See man page for more info.
-# glx-no-stencil = true; # Recommended.
-glx-copy-from-front = false; # Useful with --glx-swap-method,
-# glx-use-copysubbuffermesa = true; # Recommended if it works. Breaks VSync.
-# glx-no-rebind-pixmap = true; # Recommended if it works.
-glx-swap-method = "undefined"; # See man page.
+# The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
+# (most applications are fine, only apps that do weird things with xshapes or argb are affected).
+# This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
+shadow-exclude = [
+    "class_g = 'conky'",
+    "name = 'Notification'"
+];
+# Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
+shadow-ignore-shaped = false;
 
-# Window type settings
+# * Fading
+# Fade windows during opacity changes.
+fading = true;
+# The time between steps in a fade in milliseconds. (default 10).
+fade-delta = 6;
+# Opacity change between steps while fading in. (default 0.028).
+fade-in-step = 0.03;
+# Opacity change between steps while fading out. (default 0.03).
+fade-out-step = 0.03;
+# Fade windows in/out when opening/closing
+no-fading-openclose = false;
+
+# Specify a list of conditions of windows that should not be faded.
+fade-exclude = [ ];
+
+# * Other
+# Use EWMH _NET_WM_ACTIVE_WINDOW to determine which window is focused instead of using FocusIn/Out events.
+# Usually more reliable but depends on a EWMH-compliant WM.
+use-ewmh-active-win = true;
+# Detect rounded corners and treat them as rectangular when --shadow-ignore-shaped is on.
+detect-rounded-corners = true;
+
+# Detect _NET_WM_OPACITY on client windows, useful for window managers not passing _NET_WM_OPACITY of client windows to frame windows.
+# This prevents opacity being ignored for some apps.
+# For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
+detect-client-opacity = true;
+
+# Specify refresh rate of the screen.
+# If not specified or 0, compton will try detecting this with X RandR extension.
+refresh-rate = 0;
+
+# Set VSync method. VSync methods currently available:
+# none: No VSync
+# drm: VSync with DRM_IOCTL_WAIT_VBLANK. May only work on some drivers.
+# opengl: Try to VSync with SGI_video_sync OpenGL extension. Only work on some drivers.
+# opengl-oml: Try to VSync with OML_sync_control OpenGL extension. Only work on some drivers.
+# opengl-swc: Try to VSync with SGI_swap_control OpenGL extension. Only work on some drivers. Works only with GLX backend. Known to be most effective on many drivers. Does not actually control paint timing, only buffer swap is affected, so it doesn’t have the effect of --sw-opti unlike other methods. Experimental.
+# opengl-mswc: Try to VSync with MESA_swap_control OpenGL extension. Basically the same as opengl-swc above, except the extension we use.
+# (Note some VSync methods may not be enabled at compile time.)
+vsync = "none";
+
+# Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
+# Reported to have no effect, though.
+dbe = false;
+# Painting on X Composite overlay window. Recommended.
+paint-on-overlay = true;
+
+# Limit compton to repaint at most once every 1 / refresh_rate second to boost performance.
+# This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
+# unless you wish to specify a lower refresh rate than the actual value.
+sw-opti = false;
+
+# Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
+# Known to cause flickering when redirecting/unredirecting windows.
+# paint-on-overlay may make the flickering less obvious.
+unredir-if-possible = false;
+
+# Specify a list of conditions of windows that should always be considered focused.
+focus-exclude = [ ];
+
+# Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
+detect-transient = true;
+# Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
+# WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
+detect-client-leader = true;
+
+# * Window type settings
 wintypes:
 {
-  tooltip = { fade = true; shadow = false; opacity = 0.75; focus = true; };
-  # fade: Fade the particular type of windows.
-  # shadow: Give those windows shadow
-  # opacity: Default opacity for the type of windows.
-  # focus: Whether to always consider windows of this type focused.
+    tooltip =
+    {
+        # fade: Fade the particular type of windows.
+        fade = true;
+        # shadow: Give those windows shadow
+        shadow = false;
+        # opacity: Default opacity for the type of windows.
+        opacity = 0.85;
+        # focus: Whether to always consider windows of this type focused.
+        focus = true;
+    };
 };
+
+# * Backend
+# Backend to use: "xrender" or "glx".
+# GLX backend is typically much faster but depends on a sane driver.
+backend = "glx" # Backend to use: "xrender" or "glx". GLX backend is typically
+
+# GLX backend # GLX backend fine-tune options. See man page for more info.
+glx-no-stencil = true; # Recommended.
+
+# GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
+# My tests with nvidia-drivers show a 10% decrease in performance when the whole screen is modified,
+# but a 20% increase when only 1/4 is.
+# My tests on nouveau show terrible slowdown.
+# Useful with --glx-swap-method, as well.
+glx-copy-from-front = false;
+
+# GLX backend: Use MESA_copy_sub_buffer to do partial screen update.
+# My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
+# May break VSync and is not available on some drivers.
+# Overrides --glx-copy-from-front.
+# glx-use-copysubbuffermesa = true;
+
+# GLX backend: Avoid rebinding pixmap on window damage.
+# Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
+# Recommended if it works.
+# glx-no-rebind-pixmap = true;
+
+# GLX backend: GLX buffer swap method we assume.
+# Could be undefined (0), copy (1), exchange (2), 3-6, or buffer-age (-1).
+# undefined is the slowest and the safest, and the default value.
+# copy is fastest, but may fail on some drivers,
+# 2-6 are gradually slower but safer (6 is still faster than 0).
+# Usually, double buffer means 2, triple buffer means 3.
+# buffer-age means auto-detect using GLX_EXT_buffer_age, supported by some drivers.
+# Useless with --glx-use-copysubbuffermesa.
+# Partially breaks --resize-damage.
+# Defaults to undefined.
+glx-swap-method = "undefined";
