--- a/aesthetics/.compton.conf
+++ b/aesthetics/.compton.conf
@@ -35,6 +35,11 @@ blur-background-fixed = false;
 # Exclude conditions for background blur.
 blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
 
+# considered these windows always focused (so not dimmed and such)
+focus-exclude = [
+    "class_g = 'mpv'"
+];
+
 # * Shadows
 # Enabled client-side shadows on windows.
 shadow = true;
@@ -54,15 +59,16 @@ shadow-offset-y = -7;
 shadow-opacity = 0.9;
 
 # Purple shadows
-shadow-red = 0.2;
+# shadow-red = 0.0;
 # shadow-green = 0.0;
-shadow-blue = 0.7;
+shadow-blue = 0.1;
 
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
 shadow-exclude = [
     "class_g = 'conky'",
+    "class_g = 'Notify-osd'",
     "name = 'Notification'"
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
@@ -124,9 +130,6 @@ sw-opti = false;
 # Known to cause flickering when redirecting/unredirecting windows.
 # paint-on-overlay may make the flickering less obvious.
 unredir-if-possible = false;
-
-# Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ ];
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
 detect-transient = true;
