obsolete tmux_or_bspc script with wm_action and reclaim s key

--- a/media/.mpv/input.conf
+++ b/media/.mpv/input.conf
@@ -73,116 +73,98 @@ SPACE-e seek 10
 SPACE-i seek 25
 SPACE-o seek 50
 # }}}
-# for both tmux and bspwm; except no rc for tmux
-# wm experimentation#{{{
-# straight from vimrc
-# change " to #
-# remove nnoremap <silent> 
-# remove <cr>
-# change :silent ! to run 
-# add hyphens in between letters
-# full path for scripts
-# unbinds 
+
+# for both tmux and bspwm (to my knowledge, mpv doesn't support different mappings for gui v term so doing it based on title)
+# wm experimentation {{{
 r ignore
 R ignore
 r-c ignore
 r-m ignore
-s ignore
-s-p ignore
 
-# r is redraw#{{{
-# worskpace/Destkop switch#{{{
-r-a run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh a
-r-r run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh r
-r-s run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh s
-r-t run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh t
-r-d run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh d
-r-h run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh h
-r-n run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh n
-r-e run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh e
-r-i run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh i
-r-o run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh o
-#}}}
-# move to destkop#{{{
-R-a run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh A
-R-r run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh R
-R-s run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh S
-R-t run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh T
-R-d run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh D
-R-h run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh H
-R-n run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh N
-R-e run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh E
-R-i run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh I
-R-o run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh O
+# r is redraw {{{
+# selection {{{
+# desktops/tmux win
+r-a run bash wm_action mpv a
+r-r run bash wm_action mpv r
+r-s run bash wm_action mpv s
+r-t run bash wm_action mpv t
+r-d run bash wm_action mpv d
+r-h run bash wm_action mpv h
+# windows/tmux pane
+r-n run bash wm_action mpv n
+r-e run bash wm_action mpv e
+# desktops/tmux win
+r-i run bash wm_action mpv i
+r-o run bash wm_action mpv o
+# last desktop/tmux win
+r-l run bash wm_action mpv l
+# last window/tmux pane
+r-u run bash wm_action mpv u
+
+# }}}
+
+# move to destkop {{{
+R-a run bash wm_action mpv A
+R-r run bash wm_action mpv R
+R-s run bash wm_action mpv S
+R-t run bash wm_action mpv T
+R-d run bash wm_action mpv D
+R-h run bash wm_action mpv H
+R-n run bash wm_action mpv N
+R-e run bash wm_action mpv E
+R-i run bash wm_action mpv I
+R-o run bash wm_action mpv O
+
 #}}}
 
-# moving windows within desktop#{{{
+# moving windows within desktop {{{
 # move to biggest
-r-c-m run bspc window -s biggest
+r-c-m run bash wm_action mpv cm
 # directions
-r-c-h run bspc window -s left
-r-c-n run bspc window -s down
-r-c-e run bspc window -s up
-r-c-i run bspc window -s right
-# circulate (changes focus)
-r-. run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh
-r-, run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh
-#}}}
+r-c-h run bash wm_action mpv ch
+r-c-n run bash wm_action mpv cn
+r-c-e run bash wm_action mpv ce
+r-c-i run bash wm_action mpv ci
+# cycle window move
+r-. run bash wm_action mpv period
+r-, run bash wm_action mpv comma
+# desktop balance
+r-b run bash wm_action mpv b
 
-#resize#{{{
-r-m-h run /home/angelic_sedition/bin/tmux_or_bspc.sh rmh
-r-m-n run /home/angelic_sedition/bin/tmux_or_bspc.sh rmn
-r-m-e run /home/angelic_sedition/bin/tmux_or_bspc.sh rme
-r-m-i run /home/angelic_sedition/bin/tmux_or_bspc.sh rmi
-#}}}
-# open urxvt
-r-u run urxvt &
-# close
-r-x run /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh rx
-
-# terminal only bindings# {{{
-# if running audio in terminal
-r-_ run tmux new-session
-r-l run tmux select-window -l
-r-/ run tmux split-window -h
-r-' run tmux split-window -h
-# r-- run tmux split window
-r-! run tmux break-pane
-# }}}
 # }}}
 
-# s becomes select/Show/settings#{{{
-#select
-s-h run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh sh
-s-n run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh sn
-s-e run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh se
-s-i run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh si
-s-l run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh sl
+# resize {{{
+r-m-h run bash wm_action mpv mh
+r-m-n run bash wm_action mpv mn
+r-m-e run bash wm_action mpv me
+r-m-i run bash wm_action mpv mi
 
+# }}}
+
+# layout {{{
 # monocle toggle
-s-t run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh st
-
-s-s run bspc window -t sticky
-
+r-k run bash wm_action mpv k
+# sticky toggle
+r-y run bash wm_action mpv y
 # for tmux (already have f in gui mpv)
-s-f run bspc window -t fullscreen
+r-f run bash wm_action mpv f
 
-# gap up and down (put in a script if ever want)
-s-u run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh su
-s-U run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh sU
+#  }}}
 
-# preselect#{{{
-s-p-h run bspc window -p left
-s-p-n run bspc window -p down
-s-p-e run bspc window -p up
-s-p-i run bspc window -p right
-s-p-x run bspc window -p cancel
-s-p-d run bspc desktop -c
-#}}}
-#}}}
+# close
+r-x run bash wm_action mpv x
+# new (tmux)
+r-w run bash wm_action mpv w
 
-#}}}
+# if running audio in terminal
+# tmux splitting/breaking
+r-/ run bash wm_action mpv slash
+r-' run bash wm_action mpv apos
+# r-- run bash wm_action mpv hyphen
+r-! run bash wm_action mpv bang
 
+# }}}
+# }}}
 # }}}
 
 # gif making# {{{
